--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -4,9 +4,9 @@ spring:
       mode: always
 
   datasource:
-    username: devuser
-    password: devpassword
-    url: jdbc:postgresql://localhost:5432/junit_test_db
+#    username: devuser
+#    password: devpassword
+#    url: jdbc:postgresql://localhost:5432/junit_test_db
     driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
